# exxe

./: .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  NEWS  README  README-hacking  TODO  buffer.c  buffer.h  configure.ac  exxe.c  exxe.spec.in  list.h  parse.c
build-aux/: .gitignore
debian/: changelog  control  copyright  rules
exxe/: .gitignore  Makefile.am  buffer.c  buffer.h  exxe.c  parse.c  parse.h  xalloc.h
python/: .gitignore  Exxe.py  Makefile.am  exxe.py  setup.py
tests/: Makefile  Makefile.am  all  onexit  prefix  python  quoting_and_variables  test-lib.sh  timeout
